UI updates -rounded credit page box & credit text and link colors -centered h1 text -buttons bounce once and no longer have exclamtion (except geo location button bc then it'll be small without text) -added normal plain text for building info text -consistent coding spacing for updated files

--- a/initialApp/public/stylesheets/geo.css
+++ b/initialApp/public/stylesheets/geo.css
@@ -5,12 +5,12 @@
 
 @font-face {
     font-family: 'TheSansOfficeLF-Bold';
-    src: url('TheSansOfficeLF-Bold.otf') format('opentype'); 
-    font-weight: normal; 
-    font-style: normal; 
-  }
+    src: url('TheSansOfficeLF-Bold.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
 
-body{
+body {
     font-family: TheSansOfficeLF-Bold;
     display: flex;
     justify-content: center;
@@ -24,15 +24,15 @@ body{
     margin-bottom: 10px;
     text-align: center;
     justify-content: center;
-    animation: pulse 1s infinite;
+    animation: pulse 1s normal;
     color: white;
     background-color: #1E1656;
     padding: 10px 20px 10px 20px;
     border-radius: 20px;
     font-size: 24px;
-    -moz-animation: bounce 2s infinite;
-    -webkit-animation: bounce 2s infinite;
-    animation: bounce 2s infinite;
+    -moz-animation: bounce 2s normal;
+    -webkit-animation: bounce 2s normal;
+    animation: bounce 2s normal;
     cursor: pointer;
 }
 
@@ -42,35 +42,45 @@ body{
 
 /* animation for each popup button */
 @keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
+
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
         -moz-transform: translateY(0);
         -ms-transform: translateY(0);
         -webkit-transform: translateY(0);
         transform: translateY(0);
     }
+
     40% {
         -moz-transform: translateY(-10px);
         -ms-transform: translateY(-10px);
         -webkit-transform: translateY(-10px);
         transform: translateY(-10px);
     }
+
     60% {
         -moz-transform: translateY(-5px);
         -ms-transform: translateY(-5px);
         -webkit-transform: translateY(-5px);
         transform: translateY(-5px);
     }
-} 
+}
 
 .popup-container {
     width: 350px;
     margin-top: 10px;
     display: flex;
-    justify-content: flex-start; /* Ensure content starts from the top */
-    align-items: center; 
+    justify-content: flex-start;
+    /* Ensure content starts from the top */
+    align-items: center;
     flex-direction: column;
-    overflow-y: auto; /* Keep scrolling behavior */
-    max-height: 400px; /* Ensure it doesn't cut off content */
+    overflow-y: auto;
+    /* Keep scrolling behavior */
+    max-height: 400px;
+    /* Ensure it doesn't cut off content */
 }
 
 
@@ -88,11 +98,16 @@ body{
     width: 60px;
     margin-bottom: 20px;
     aspect-ratio: 4;
-    background: radial-gradient(circle closest-side,#000 90%,#0000) 0/calc(100%/3) 100% space;
+    background: radial-gradient(circle closest-side, #000 90%, #0000) 0/calc(100%/3) 100% space;
     clip-path: inset(0 100% 0 0);
     animation: l1 1s steps(4) infinite;
-  }
-@keyframes l1 {to{clip-path: inset(0 -34% 0 0)}}
+}
+
+@keyframes l1 {
+    to {
+        clip-path: inset(0 -34% 0 0)
+    }
+}
 
 
 
@@ -101,7 +116,7 @@ body{
     border: solid black 2px;
 }
 
-#phone-container{
+#phone-container {
     display: flex;
     width: 393px;
     height: 852px;
@@ -130,6 +145,7 @@ h1 {
     color: #1E1656;
     filter: drop-shadow(1px 1px 1px #1E1656);
 }
+
 .app-button {
     width: 350px;
     margin-top: 12px;
@@ -140,7 +156,7 @@ h1 {
     color: white;
     background-color: #1E1656;
     padding: 15px 40px 15px 40px;
-    
+
 }
 
 #debug-btn {
@@ -148,7 +164,7 @@ h1 {
     height: 20px;
     font-size: 10px;
     padding: none;
-    background-color: grey; 
+    background-color: grey;
     border: solid 1px white;
     border-radius: 10px;
     color: white;
